# MotionMaxwellGoogleTest

./: .gitignore  CMakeLists.txt  MotionMaxwellGoogleTest.sln  MotionMaxwellGoogleTest.vcxproj  MotionMaxwellInterface.h  README.md  test.cpp
TestProjects/: 2cubes.sab  UnitTest.playlist  analyze_test1.aedt  cs_test1.aedt  cs_test2.aedt  cs_test3.aedt  geometry.sab  geometry2.sab  geometry3.sab  materialtest.sab  solverinfo.txt  test1.aedt
